# algorithm_for_c

./: CMakeLists.txt  CMakePresets.json  README.md  main.c
include/: hashmap.h  helper.h  sort.h
src/: hashmap.c  helper.c  sort.c
